--- a/index.html
+++ b/index.html
@@ -35,7 +35,41 @@
 <span class="pl-smi">uri</span>.<span class="pl-en">setQuery</span>({flower<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">'</span>sakura<span class="pl-pds">'</span></span>, tree<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">'</span>santa<span class="pl-pds">'</span></span>});
 <span class="pl-smi">uri</span>.<span class="pl-en">setVar</span>(<span class="pl-s"><span class="pl-pds">'</span>foo<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>bar<span class="pl-pds">'</span></span>);
 
+<span class="pl-c">// get var</span>
+<span class="pl-k">var</span> foo <span class="pl-k">=</span> <span class="pl-smi">uri</span>.<span class="pl-en">getVar</span>(<span class="pl-s"><span class="pl-pds">'</span>foo<span class="pl-pds">'</span></span>);
+
 <span class="pl-smi">uri</span>.<span class="pl-c1">toString</span>();</pre></div>
+
+<h2>
+<a id="get--set-uri-data" class="anchor" href="#get--set-uri-data" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Get &amp; Set Uri Data</h2>
+
+<div class="highlight highlight-source-js"><pre><span class="pl-c">// Get</span>
+<span class="pl-k">var</span> scheme <span class="pl-k">=</span> <span class="pl-smi">uri</span>.<span class="pl-c1">scheme</span>;
+
+<span class="pl-c">// Set</span>
+<span class="pl-smi">uri</span>.<span class="pl-c1">scheme</span> <span class="pl-k">=</span> <span class="pl-s"><span class="pl-pds">'</span>ftp<span class="pl-pds">'</span></span>;</pre></div>
+
+<h2>
+<a id="all-uri-data" class="anchor" href="#all-uri-data" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>All Uri Data</h2>
+
+<div class="highlight highlight-source-js"><pre><span class="pl-k">var</span> uri <span class="pl-k">=</span> <span class="pl-k">new</span> <span class="pl-en">URI</span>(<span class="pl-s"><span class="pl-pds">'</span>https://apple:1234@example.com:8080/flower/sakura?foo=bar#orange<span class="pl-pds">'</span></span>);
+
+<span class="pl-smi">uri</span>.<span class="pl-c1">scheme</span> <span class="pl-k">=</span> <span class="pl-s"><span class="pl-pds">'</span>https<span class="pl-pds">'</span></span>;
+<span class="pl-smi">uri</span>.<span class="pl-smi">username</span> <span class="pl-k">=</span> <span class="pl-s"><span class="pl-pds">'</span>apple<span class="pl-pds">'</span></span>;
+<span class="pl-smi">uri</span>.<span class="pl-smi">password</span> <span class="pl-k">=</span> <span class="pl-s"><span class="pl-pds">'</span>1234<span class="pl-pds">'</span></span>;
+<span class="pl-smi">uri</span>.<span class="pl-c1">host</span> <span class="pl-k">=</span> <span class="pl-s"><span class="pl-pds">'</span>example.com<span class="pl-pds">'</span></span>;
+<span class="pl-smi">uri</span>.<span class="pl-c1">port</span> <span class="pl-k">=</span> <span class="pl-c1">8080</span>;
+<span class="pl-smi">uri</span>.<span class="pl-smi">path</span> <span class="pl-k">=</span> <span class="pl-s"><span class="pl-pds">'</span>flower/sakura<span class="pl-pds">'</span></span>;
+<span class="pl-smi">uri</span>.<span class="pl-smi">query</span> <span class="pl-k">=</span> {foo<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">'</span>bar<span class="pl-pds">'</span></span>};
+<span class="pl-smi">uri</span>.<span class="pl-c1">hash</span> <span class="pl-k">=</span> <span class="pl-s"><span class="pl-pds">'</span>orange<span class="pl-pds">'</span></span>;</pre></div>
+
+<h2>
+<a id="build-query" class="anchor" href="#build-query" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Build query</h2>
+
+<div class="highlight highlight-source-js"><pre><span class="pl-smi">uri</span>.<span class="pl-en">httpBuildQuery</span>({a<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">'</span>b<span class="pl-pds">'</span></span>, c<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">'</span>d<span class="pl-pds">'</span></span>}); <span class="pl-c">// a=b&amp;c=d</span>
+
+<span class="pl-c">// separator as second argument</span>
+<span class="pl-smi">uri</span>.<span class="pl-en">httpBuildQuery</span>({a<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">'</span>b<span class="pl-pds">'</span></span>, c<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">'</span>d<span class="pl-pds">'</span></span>}, <span class="pl-s"><span class="pl-pds">'</span>&amp;amp;<span class="pl-pds">'</span></span>); <span class="pl-c">// a=b&amp;amp;c=d</span></pre></div>
 
 <h3>
 <a id="no-conflict" class="anchor" href="#no-conflict" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>No Conflict</h3>
